jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AbreCupomCallback) (PCHAR CPF_CNPJ,PCHAR Nome,PCHAR Endereco);


typedef void (*BobinaAdicionaLinhasCallback) (PCHAR linhas,PCHAR operacao);


typedef void (*ChangeEstadoCallback) (int EstadoAnterior,int EstadoAtual);


typedef BOOL (*ChequeEstadoCallback) (int EstadoAtual);


typedef void (*EfetuaPagamentoCallback) (PCHAR CodFormaPagto,double Valor,PCHAR Observacao,BOOL ImprimeVinculado);


typedef void (*FechaCupomCallback) (PCHAR Observacao,int IndiceBMP);


typedef PCHAR (*GetKeyCallback) (void);


typedef void (*IntArgumentCallback) (int value);


typedef void (*NoArgumentCallback) (void);


typedef BOOL (*OnErrorCallback) (void);


typedef BOOL (*OnErrorRelatorioCallback) (int Indice);


typedef BOOL (*OnMsgRetentarCallback) (PCHAR Mensagem,PCHAR Situacao);


typedef void (*SangriaSuprimentoCallback) (double Valor,PCHAR Obs,PCHAR DescricaoCNF,PCHAR DescricaoFPG);


typedef void (*StringCallback) (PCHAR Mensagem);


typedef void (*SubtotalizaCupomCallback) (double DescontoAcrescimo,PCHAR MensagemRodape);


typedef void (*VendeItemCallback) (PCHAR Codigo,PCHAR Descricao,PCHAR AliquotaICMS,double Qtd,double ValorUnitario,double ValorDescontoAcrescimo,PCHAR Unidade,PCHAR TipoDescontoAcrescimo,PCHAR DescontoAcrescimo);

DllImport int ECF_SetOnAntesLeituraX(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesReducaoZ(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesSangria(const INTPTR ecfHandle, const SangriaSuprimentoCallback method);

DllImport int ECF_SetOnAntesSubtotalizaCupom(const INTPTR ecfHandle, const SubtotalizaCupomCallback method);

DllImport int ECF_SetOnAntesSubtotalizaNaoFiscal(const INTPTR ecfHandle, const SubtotalizaCupomCallback method);

DllImport int ECF_SetOnAntesSuprimento(const INTPTR ecfHandle, const SangriaSuprimentoCallback method);

DllImport int ECF_SetOnAntesVendeItem(const INTPTR ecfHandle, const VendeItemCallback method);

DllImport int ECF_SetOnBobinaAdicionaLinhas(const INTPTR ecfHandle, const BobinaAdicionaLinhasCallback method);

DllImport int ECF_SetOnChangeEstado(const INTPTR ecfHandle, const ChangeEstadoCallback method);

DllImport int ECF_SetOnChequeEstado(const INTPTR ecfHandle, const ChequeEstadoCallback method);

DllImport int ECF_SetOnDepoisAbreCupom(const INTPTR ecfHandle, const AbreCupomCallback method);

DllImport int ECF_SetOnDepoisAbreCupomVinculado(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisAbreNaoFiscal(const INTPTR ecfHandle, const AbreCupomCallback method);

DllImport int ECF_SetOnDepoisAbreRelatorioGerencial(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnDepoisCancelaCupom(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisCancelaItemNaoFiscal(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnDepoisCancelaItemVendido(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnDepoisCancelaNaoFiscal(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisEfetuaPagamento(const INTPTR ecfHandle, const EfetuaPagamentoCallback method);

DllImport int ECF_SetOnDepoisEfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const EfetuaPagamentoCallback method);

DllImport int ECF_SetOnDepoisFechaCupom(const INTPTR ecfHandle, const FechaCupomCallback method);

DllImport int ECF_SetOnDepoisFechaNaoFiscal(const INTPTR ecfHandle, const FechaCupomCallback method);

DllImport int ECF_SetOnDepoisFechaRelatorio(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisLeituraX(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisReducaoZ(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnDepoisSangria(const INTPTR ecfHandle, const SangriaSuprimentoCallback method);

DllImport int ECF_SetOnDepoisSubtotalizaCupom(const INTPTR ecfHandle, const SubtotalizaCupomCallback method);

DllImport int ECF_SetOnDepoisSubtotalizaNaoFiscal(const INTPTR ecfHandle, const SubtotalizaCupomCallback method);

DllImport int ECF_SetOnDepoisSuprimento(const INTPTR ecfHandle, const SangriaSuprimentoCallback method);

DllImport int ECF_SetOnDepoisVendeItem(const INTPTR ecfHandle, const VendeItemCallback method);

DllImport int ECF_SetOnErrorAbreCupom(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorAbreCupomVinculado(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorAbreNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorAbreRelatorioGerencial(const INTPTR ecfHandle, const OnErrorRelatorioCallback method);

DllImport int ECF_SetOnErrorCancelaCupom(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorCancelaItemNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorCancelaItemVendido(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorCancelaNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorEfetuaPagamento(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorEfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorFechaCupom(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorFechaNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorFechaRelatorio(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorLeituraX(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorReducaoZ(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorSangria(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorSemPapel(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnErrorSubtotalizaCupom(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorSubtotalizaNaoFiscal(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorSuprimento(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnErrorVendeItem(const INTPTR ecfHandle, const OnErrorCallback method);

DllImport int ECF_SetOnMsgAguarde(const INTPTR ecfHandle, const StringCallback method);

DllImport int ECF_SetOnMsgRetentar(const INTPTR ecfHandle, const OnMsgRetentarCallback method);