ACBrFramework/ACBrFramework.Net/ACBrFramework.Net/Serial/ECF/ACBrECFInterop.cs


		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesLeituraX(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesReducaoZ(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesSangria(IntPtr ecfHandle, SangriaSuprimentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesSubtotalizaCupom(IntPtr ecfHandle, SubtotalizaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesSubtotalizaNaoFiscal(IntPtr ecfHandle, SubtotalizaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesSuprimento(IntPtr ecfHandle, SangriaSuprimentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnAntesVendeItem(IntPtr ecfHandle, VendeItemCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnBobinaAdicionaLinhas(IntPtr ecfHandle, BobinaAdicionaLinhasCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnChangeEstado(IntPtr ecfHandle, ChangeEstadoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnChequeEstado(IntPtr ecfHandle, ChequeEstadoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisAbreCupom(IntPtr ecfHandle, AbreCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisAbreCupomVinculado(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisAbreNaoFiscal(IntPtr ecfHandle, AbreCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisAbreRelatorioGerencial(IntPtr ecfHandle, IntArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisCancelaCupom(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisCancelaItemNaoFiscal(IntPtr ecfHandle, IntArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisCancelaItemVendido(IntPtr ecfHandle, IntArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisCancelaNaoFiscal(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisEfetuaPagamento(IntPtr ecfHandle, EfetuaPagamentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisEfetuaPagamentoNaoFiscal(IntPtr ecfHandle, EfetuaPagamentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisFechaCupom(IntPtr ecfHandle, FechaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisFechaNaoFiscal(IntPtr ecfHandle, FechaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisFechaRelatorio(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisLeituraX(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisReducaoZ(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisSangria(IntPtr ecfHandle, SangriaSuprimentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisSubtotalizaCupom(IntPtr ecfHandle, SubtotalizaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisSubtotalizaNaoFiscal(IntPtr ecfHandle, SubtotalizaCupomCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisSuprimento(IntPtr ecfHandle, SangriaSuprimentoCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnDepoisVendeItem(IntPtr ecfHandle, VendeItemCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorAbreCupom(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorAbreCupomVinculado(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorAbreNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorAbreRelatorioGerencial(IntPtr ecfHandle, OnErrorRelatorioCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorCancelaCupom(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorCancelaItemNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorCancelaItemVendido(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorCancelaNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorEfetuaPagamento(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorEfetuaPagamentoNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorFechaCupom(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorFechaNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorFechaRelatorio(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorLeituraX(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorReducaoZ(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorSangria(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorSemPapel(IntPtr ecfHandle, NoArgumentCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorSubtotalizaCupom(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorSubtotalizaNaoFiscal(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorSuprimento(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnErrorVendeItem(IntPtr ecfHandle, OnErrorCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnMsgAguarde(IntPtr ecfHandle, StringCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnMsgRetentar(IntPtr ecfHandle, OnMsgRetentarCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnPAFCalcEAD(IntPtr ecfHandle, StringCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int ECF_SetOnPAFGetKeyRSA(IntPtr ecfHandle, GetKeyCallback method);


		#endregion Eventos

		#endregion ACBrECF
	}
}